correct button contrast

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,6 @@ body h1{
   padding: 10px;
   margin-top: 70px;
   margin-bottom: 10px;
-  opacity: 70%;
 }
 
 body h2 {
@@ -37,7 +36,6 @@ body h2 {
   border: black;
   text-align: center;
   margin-bottom:60px;
-  opacity: 65%;
   padding: 5px;
 }
 
@@ -94,19 +92,20 @@ title {
 
 .buttons {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: flex-start;
   align-items: center;
   font-family: 'Raleway', sans-serif;
   margin-top: 2vh;
-  color: rgba(157, 23, 132, 0.95);
-  background-color: #afb7e5;
+  border-radius: 40px;
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 115, 229, 0.95);
   font-weight: bold;
-  border: 2px solid #afb7e5;
-  border-radius: 20px;
+  border: 2px solid black;
   padding: 5px;
+  height: 60px;
 }
-
+/* 
 .flipBtn {
   font-family: 'Raleway', sans-serif;
   margin-top: 2vh;
@@ -138,4 +137,4 @@ title {
   border: 2px solid #afb7e5;
   border-radius: 20px;
   padding: 5px;
-}
+} */
